# kop-audio

./: .gitignore  Cargo.toml  build.rs  draw.excalidraw  shell.nix
src/: audio.rs  client.rs  coordinator.rs  jitter.rs  main.rs  mp3player.rs  server.rs  tui.rs
src/implementations/: pulseaudio.rs
src/servers/: server.rs
